Update readme and other docs from seatcamp to partychurch

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "meatspace",
-  "short_name": "meatspace",
+  "name": "partychurch",
+  "short_name": "partychurch",
   "start_url": "./",
   "background_color": "#ECECEC",
   "theme_color": "#212121",
