--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "data-uri-to-buffer": "0.0.4",
     "express": "^4.9.8",
     "filmstrip2gif": "^1.0.1",
+    "page": "^1.7.1",
     "postcss": "^5.0.8",
     "prepare-response": "^1.1.2",
     "pug": "^2.0.0-beta6",
