--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cuid": "^1.2.4",
     "data-uri-to-blob": "0.0.4",
     "data-uri-to-buffer": "0.0.4",
+    "debug": "^2.2.0",
     "express": "^4.9.8",
     "filmstrip2gif": "^1.0.1",
     "page": "^1.7.1",
