chore: add comments and update author metadata

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "livestream",
     "chat"
   ],
-  "author": "Jordan Klassen <forivall@gmail.com> (http://forivall.com/)",
+  "author": "Emily Marigold Klassen <forivall@gmail.com> (http://forivall.com/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/forivall/partychurch/issues"
