--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "pug": "^2.0.0-beta6",
     "pugify": "^2.1.0",
     "rimraf": "^2.2.8",
+    "semantic-ui": "^2.2.10",
     "serve-static": "^1.10.0",
     "sha1": "^1.1.0",
     "socket.io": "^1.1.0",
