--- a/package.json
+++ b/package.json
@@ -77,12 +77,16 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.1.0",
+    "browser-sync": "^2.18.12",
     "chai": "^3.3.0",
+    "connect-browser-sync": "^2.1.0",
     "eslint": "^3.0.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.14.0",
     "mocha": "^2.3.3",
     "mocha-eslint": "^2.1.1",
+    "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.2",
     "proxyquire": "^1.7.2",
     "pug-lint": "^2.3.0",
     "stream-spigot": "^3.0.5",
