chore: sort package.json

--- a/package.json
+++ b/package.json
@@ -2,33 +2,29 @@
   "name": "partychurch",
   "version": "0.0.0",
   "description": "Web-based livestreaming with video chat!",
-  "engines": {
-    "node": ">=8.0.0"
+  "keywords": [
+    "chat",
+    "livestream",
+    "video",
+    "webrtc"
+  ],
+  "homepage": "https://github.com/forivall/partychurch",
+  "bugs": {
+    "url": "https://github.com/forivall/partychurch/issues"
   },
+  "license": "MIT",
+  "author": "Emily Marigold Klassen <forivall@gmail.com> (http://forivall.com/)",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/forivall/partychurch"
+  },
   "scripts": {
     "build": "webpack",
     "start": "node index.js",
     "test": "echo 'No tests yet!' && false"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/forivall/partychurch"
-  },
-  "keywords": [
-    "webrtc",
-    "video",
-    "livestream",
-    "chat"
-  ],
-  "author": "Emily Marigold Klassen <forivall@gmail.com> (http://forivall.com/)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/forivall/partychurch/issues"
-  },
-  "homepage": "https://github.com/forivall/partychurch",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "css-loader": "^0.28.1",
     "ts-loader": "^2.0.3",
@@ -40,6 +36,9 @@
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^2.5.0"
+  },
+  "engines": {
+    "node": ">=8.0.0"
   },
   "frontendDependencies": [
     "vue",
