--- a/package.json
+++ b/package.json
@@ -24,18 +24,20 @@
     "start": "node index.js",
     "test": "echo 'No tests yet!' && false"
   },
-  "dependencies": {},
+  "dependencies": {
+    "typescript": "^2.8.1"
+  },
   "devDependencies": {
-    "css-loader": "^0.28.1",
-    "ts-loader": "^2.0.3",
-    "typescript": "^2.7.2",
-    "vue": "^2.5.2",
-    "vue-class-component": "^6.0.0",
-    "vue-loader": "^12.0.3",
+    "css-loader": "^0.28.11",
+    "ts-loader": "^4.2.0",
+    "vue": "^2.5.16",
+    "vue-class-component": "^6.2.0",
+    "vue-loader": "^14.2.2",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^2.5.0"
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14"
   },
   "engines": {
     "node": ">=8.0.0"
