--- a/package.json
+++ b/package.json
@@ -21,15 +21,22 @@
   },
   "scripts": {
     "build": "webpack",
+    "dev": "webpack-dev-server",
     "start": "node index.js",
     "test": "echo 'No tests yet!' && false"
   },
   "dependencies": {
+    "pug-loader": "^2.4.0",
+    "tsconfig-paths-webpack-plugin": "^3.0.4",
+    "tslib": "^1.9.0",
     "typescript": "^2.8.1"
   },
   "devDependencies": {
+    "@types/node": "^10.0.8",
+    "@types/webpack": "^4.1.6",
     "css-loader": "^0.28.11",
-    "ts-loader": "^4.2.0",
+    "ts-loader": "^4.3.0",
+    "ts-node": "^6.0.3",
     "vue": "^2.5.16",
     "vue-class-component": "^6.2.0",
     "vue-loader": "^14.2.2",
@@ -37,7 +44,8 @@
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.4"
   },
   "engines": {
     "node": ">=8.0.0"
