--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,3 @@
 {
-    "compilerOptions": {
-        "outDir": "./built/",
-        "sourceMap": true,
-        "strict": true,
-        "module": "es2015",
-        "moduleResolution": "node",
-        "target": "es5",
-        "experimentalDecorators": true
-    },
-    "include": [
-        "./src/**/*"
-    ]
+  "extends": "./tsconfig.base.json"
 }
