--- a/package.json
+++ b/package.json
@@ -26,17 +26,24 @@
     "test": "echo 'No tests yet!' && false"
   },
   "dependencies": {
+    "@types/socket.io": "^1.4.34",
+    "@types/webpack-dev-middleware": "^2.0.1",
+    "fastify": "^1.5.0",
+    "fastify-static": "^0.12.0",
     "pug-loader": "^2.4.0",
+    "socket.io": "^2.1.1",
+    "ts-node": "^6.1.0",
     "tsconfig-paths-webpack-plugin": "^3.0.4",
     "tslib": "^1.9.0",
     "typescript": "^2.8.1"
   },
   "devDependencies": {
     "@types/node": "^10.0.8",
+    "@types/socket.io-client": "^1.4.32",
     "@types/webpack": "^4.1.6",
     "css-loader": "^0.28.11",
     "ts-loader": "^4.3.0",
-    "ts-node": "^6.0.3",
+    "tslint": "^5.10.0",
     "vue": "^2.5.16",
     "vue-class-component": "^6.2.0",
     "vue-loader": "^14.2.2",
@@ -45,10 +52,11 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.4"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "frontendDependencies": [
     "vue",
